--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.18.0",
+    "react-scroll": "^1.9.0",
     "react-toastify": "^9.1.3",
     "sass": "^1.69.5"
   },
